initial working version

--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -77,7 +77,7 @@ status_screen:1
 #### Baudrate / Connection speed
 # This baudrate setting is used for serial connection to the printer and other serial hosts like ESP8266.
 #   Options: [2400: 0, 9600: 1, 19200: 2, 38400: 3, 57600: 4, 115200: 5, 250000: 6, 500000: 7, 1000000: 8]
-baudrate:5
+baudrate:6
 
 #### Default Touch Mode Language
 # Select the language to display on the LCD while in Touch Mode.
@@ -147,7 +147,7 @@ persistent_info:0
 #### File List Mode
 # Display files in list mode instead of icon mode.
 #   Options: [enable: 1, disable: 0]
-files_list_mode:1
+files_list_mode:0
 
 #### Notification Style For ACK Messages
 # Set the notification style to use for displaying the ACK messages which start with 'echo:'.
@@ -174,7 +174,7 @@ default_mode:1
 # Keep UART (serial communication) alive in Marlin Mode.
 # Allows seamless OctoPrint UART connection to the TFT's UART/serial expansion port no matter which mode the TFT is in.
 #   Options: [enable: 1, disable: 0]
-serial_always_on:0
+serial_always_on:1
 
 #### Default Marlin Mode Background & Font Colors
 # Select an option from the provide list or set the color (RGB888 format) hex value directly (start with “0x”),
@@ -208,7 +208,7 @@ marlin_type:0
 
 #### Marlin Mode Title
 # Text displayed at the top of the TFT in Marlin Mode.
-marlin_title:Marlin Mode
+marlin_title:Santiago GTO
 
 
 #--------------------------------------------------------------------
@@ -226,7 +226,7 @@ heated_bed:1
 #### Heated Chamber Support
 # The TFT will auto-detect if chamber heating is enabled in Marlin firmware.
 #   Options: [enable: 1, disable: 0]
-heated_chamber:0
+heated_chamber:1
 
 #### Extruder Count
 #   Options: [1 to 6]
@@ -234,11 +234,23 @@ ext_count:1
 
 #### Fan Count
 #   Options: [1 to 6]
-fan_count:1
+fan_count:3
 
 #### Fan Controller Count
 #   Options: 0 to 2
 fan_ctrl_count:0
+
+#### Case Fan Support
+# TODO: Check if auto is possible
+# The TFT will auto-detect if chamber heating is enabled in Marlin firmware.
+#   Options: [disable: 0, other value: fan number < fan_count]
+case_fan:2
+
+#### Air Assist type
+# TODO: Check if auto is possible
+# The TFT will auto-detect if chamber heating is enabled in Marlin firmware.
+#   Options: [disable: 0, on/off: 1, PWM: 2, ***auto-detect: 3***]
+air_pump:2
 
 #### Bed / Extruder / Chamber Maximum Temperatures
 #   Format: [max_temp: T0:<max temp> T1:<max temp> T2:<max temp> T3:<max temp> T4:<max temp> T5:<max temp> BED:<max temp> CHAMBER:<max temp>]
@@ -248,7 +260,7 @@ max_temp:T0:275 T1:275 T2:275 T3:275 T4:275 T5:275 BED:150 CHAMBER:60
 #### Cold Extrusion Minimum Temperature
 # Minimum temperature need to extrude/retract. Any extrude/retract below this temperature will be prevented.
 #   Unit: [°C]
-min_temp:180
+min_temp:170
 
 #### Fan Maximum PWM Speed
 # Set minimum and maximum fan speed allowed by the printer.
@@ -264,12 +276,12 @@ fan_max:F0:255 F1:255 F2:255 F3:255 F4:255 F5:255 CtL:255 CtI:255
 #   Unit: [mm]
 #   Value range: [min: -2000, max: 2000]
 size_min:X0 Y0 Z0
-size_max:X235 Y235 Z250
+size_max:X265 Y200 Z240
 
 #### Default X & Y Move Speeds/feedrates
 # Move speeds used in move menu to move X and Y axes.
 #   Format: [move_speed: S<feedrate mm/min> N<feedrate mm/min> F<feedrate mm/min>]
-xy_speed:S1000 N3000 F5000
+xy_speed:S1000 N1500 F3000
 
 #### Default Z Speeds/feedrates
 # Move speeds used in move menu to move Z axis.
@@ -279,7 +291,7 @@ z_speed:S500 N1000 F2000
 #### Default Extruder Speeds/feedrates
 # Speed settings used to extrude/retract.
 #   Format: [ext_speed: S<feedrate mm/min> N<feedrate mm/min> F<feedrate mm/min>]
-ext_speed:S60 N600 F1200
+ext_speed:S60 N300 F900
 
 #### Auto Save Load Leveling Data
 # The TFT will auto-detect if Auto Bed Level is available.
@@ -353,7 +365,7 @@ pause_feedrate:XY6000 Z6000 E600
 # subtracted from maximum X & Y bed coordinates to calculate manual leveling points.
 #   Format: [level_edge_distance:<distance in mm>]
 #   Unit: [distance in mm]
-level_edge_distance:20
+level_edge_distance:15
 
 ## Z Position (Manual Leveling)
 # Lower z axis to this position after reaching a leveling point.
@@ -393,7 +405,7 @@ xy_offset_probing:1
 # NOTE: Only for Marlin printers with one stepper driver per Z stepper motor and no Z timing belt. Also requires a BLTouch.
 #
 #   Options: [enable: 1, disable: 0]
-z_steppers_alignment:0
+z_steppers_alignment:1
 
 #### Preheat Temperatures
 #   Preheat name format: [preheat_nameX:<name (max 7 characters)>]
