initial commit (main menu NOT working)

--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -250,7 +250,7 @@ case_fan:2
 # TODO: Check if auto is possible
 # The TFT will auto-detect if chamber heating is enabled in Marlin firmware.
 #   Options: [disable: 0, on/off: 1, PWM: 2, ***auto-detect: 3***]
-air_pump:2
+air_assist_type:2
 
 #### Bed / Extruder / Chamber Maximum Temperatures
 #   Format: [max_temp: T0:<max temp> T1:<max temp> T2:<max temp> T3:<max temp> T4:<max temp> T5:<max temp> BED:<max temp> CHAMBER:<max temp>]
