--- a/Copy to SD Card root directory to update/Language Packs/language_en.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_en.ini
@@ -1,5 +1,5 @@
 #### Language Code:EN
-## Language Version:20210217
+## Language Version:20210227
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -266,8 +266,12 @@ label_adjust_ok:Adjustment success
 label_adjust_failed:Adjustment failed, please try again
 label_unifiedmove:Movement
 label_unifiedheat:Heat/Fan
+label_aira_casefan:Air A/Case Fan
+label_air_assist:Air assist
 label_touch_to_exit:Touch anywhere to exit
 label_mainmenu:Menu
+label_lasercncmainmenu:Menu
+label_laser_cnc:Laser/CNC
 label_parameter_setting:Parameter Settings
 label_eeprom_settings:EEPROM
 label_leveling_edge_distance:Bed edge distance
@@ -294,6 +298,7 @@ label_notifications:Notifications
 label_mesh_editor:Mesh edit
 label_mesh_tuner:Mesh tuner
 label_case_light:Case light
+label_case_fan:Case fan
 label_load_started:Loading filament.\nPlease wait for the process\nto complete.
 label_unload_started:Unloading filament.\nPlease wait for the process\nto complete.
 label_heaters_on:Some heaters are still ON.\nDo you want to stop them?
