menu working. brain raminder, enums labels works in switch not if if

--- a/Copy to SD Card root directory to update/Language Packs/language_en.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_en.ini
@@ -270,7 +270,7 @@ label_aira_casefan:Air A/Case Fan
 label_air_assist:Air assist
 label_touch_to_exit:Touch anywhere to exit
 label_mainmenu:Menu
-label_lasercncmainmenu:Menu
+label_lasercncmainmenu:MenuLC
 label_laser_cnc:Laser/CNC
 label_parameter_setting:Parameter Settings
 label_eeprom_settings:EEPROM
