Before going to all fan logic

--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -246,11 +246,14 @@ fan_ctrl_count:0
 #   Options: [disable: 0, other value: fan number < fan_count]
 case_fan:2
 
-#### Air Assist type
-# TODO: Check if auto is possible
+#### Air Assist type and fan number
+# TODO: Check if auto is possible. Fix logic for Pin number, M7 command for type 1 and fan for type 2
 # The TFT will auto-detect if chamber heating is enabled in Marlin firmware.
-#   Options: [disable: 0, on/off: 1, PWM: 2, ***auto-detect: 3***]
-air_assist_type:2
+# On/off will be controlled by M7 command (connected to a relay).
+#   Type options: [disable: 0, on/off: 1, Controlled by Fan (M106): 2, ***auto-detect: 3***]
+#   Fan options: [fan number < fan_count. 0 if not controlled by fan]
+air_assist_type:1
+air_assist_fan:0
 
 #### Bed / Extruder / Chamber Maximum Temperatures
 #   Format: [max_temp: T0:<max temp> T1:<max temp> T2:<max temp> T3:<max temp> T4:<max temp> T5:<max temp> BED:<max temp> CHAMBER:<max temp>]
