all working. next step move fan types 1 commands to parent menu

--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -241,17 +241,18 @@ fan_count:3
 fan_ctrl_count:0
 
 #### Case Fan Support
-# TODO: Check if auto is possible
-# The TFT will auto-detect if chamber heating is enabled in Marlin firmware.
-#   Options: [disable: 0, other value: fan number < fan_count]
+# TODO: Check if auto is possible. Fix logic for Pin number?
+# Always controlled by M106 (On = S255, Off = S0).
+#   Type options: [disable: 0, on/off: 1, PWM capable: 2, ***auto-detect: 3***]
+#   Fan options: [fan number < fan_count if type 1]
+case_fan_type:1
 case_fan:2
 
 #### Air Assist type and fan number
-# TODO: Check if auto is possible. Fix logic for Pin number, M7 command for type 1 and fan for type 2
-# The TFT will auto-detect if chamber heating is enabled in Marlin firmware.
-# On/off will be controlled by M7 command (connected to a relay).
-#   Type options: [disable: 0, on/off: 1, Controlled by Fan (M106): 2, ***auto-detect: 3***]
-#   Fan options: [fan number < fan_count. 0 if not controlled by fan]
+# TODO: Check if auto is possible. Fix logic for Pin number?
+# On/off will be controlled by M7 command (connected to a relay), PWM will be controlled by M106.
+#   Type options: [disable: 0, on/off: 1, PWM capable: 2, ***auto-detect: 3***]
+#   Fan options: [fan number < fan_count if type 1]
 air_assist_type:1
 air_assist_fan:0
 
