all data coming this time

--- a/Copy to SD Card root directory to update/Language Packs/language_en.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_en.ini
@@ -1,5 +1,5 @@
 #### Language Code:EN
-## Language Version:20210227
+## Language Version:20210302
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -266,7 +266,8 @@ label_adjust_ok:Adjustment success
 label_adjust_failed:Adjustment failed, please try again
 label_unifiedmove:Movement
 label_unifiedheat:Heat/Fan
-label_aira_casefan:Air A/Case Fan
+label_air_control:Air Control
+label_air_assist_type:Air assist type
 label_air_assist:Air assist
 label_touch_to_exit:Touch anywhere to exit
 label_mainmenu:Menu
@@ -298,7 +299,8 @@ label_notifications:Notifications
 label_mesh_editor:Mesh edit
 label_mesh_tuner:Mesh tuner
 label_case_light:Case light
-label_case_fan:Case fan
+label_chamber_fan_type:Case fan type
+label_chamber_fan:Case fan
 label_load_started:Loading filament.\nPlease wait for the process\nto complete.
 label_unload_started:Unloading filament.\nPlease wait for the process\nto complete.
 label_heaters_on:Some heaters are still ON.\nDo you want to stop them?
