changed all aircontrol to ventilationmenu

--- a/Copy to SD Card root directory to update/Language Packs/language_en.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_en.ini
@@ -266,7 +266,7 @@ label_adjust_ok:Adjustment success
 label_adjust_failed:Adjustment failed, please try again
 label_unifiedmove:Movement
 label_unifiedheat:Heat/Fan
-label_air_control:Air Control
+label_ventilationmenu:Ventilation
 label_air_assist_type:Air assist type
 label_air_assist:Air assist
 label_touch_to_exit:Touch anywhere to exit
