--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -242,10 +242,16 @@ fan_ctrl_count:0
 
 #### Case Fan Support
 # TODO: Check if auto is possible. Fix logic for Pin number?
-# Always controlled by M106 (On = S255, Off = S0).
-#   Type options: [disable: 0, on/off: 1, PWM capable: 2, ***auto-detect: 3***]
-#   Fan options: [fan number < fan_count if type 1]
-chamber_fan_type:1
+# Always controlled by M106 (On = S255, Off = S0)
+## Type options:
+## [
+## Disabled: 9
+## Enabled on/off: 8 (Relay controlled?)
+## Enabled, VALUES AS FROM MARLIN FIRMWARE CONFIG_ADV: 0, 1, 2,
+## ***auto-detect: 3***
+## ]
+#  Chamber Fan options: [fan number < fan_count if not disabled]
+chamber_fan_type:0
 chamber_fan:2
 
 #### Air Assist type and fan number
